[tool.poetry]
name = "lowkey"
version = "0.7.6"
description = ""
authors = ["draew6"]
packages = [{ include = "lowkey" }]
requires-python = ">=3.13"

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = {extras = ["standard"], version = "<1.0"}
pydantic = ">=2.11,<3.0.0"
pydantic-settings = ">=2.0,<3.0"
crawlee = {version = "1.0.3", extras = ["httpx", "beautifulsoup"]}
curlify2 = ">=2.0.0,<3.0.0"
zstandard = ">=0.25.0,<1.0.0"
miniopy_async = ">=1.23.4,<2.0.0"
fastlet = { git = "https://github.com/draew6/fastlet.git" }
aiohttp = "<3.13.0"
pandas = ">=2.0.0,<3.0.0"
beautifulsoup4 = ">=4.14.0,<5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lowkey = "lowkey.cli.run:main"
